--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
                 <div class="header">
                     <div class="logo">
                         <div class="gauche">
-                            <a href="www.google.com"><img height="60px" src="./images/Logo.png" alt="Organick"></a>
+                            <a href="www.google.com"><img height="60px" src="./image3/Logo.png" alt="Organick"></a>
                             <div class="divb"><b>Organick</b></div>
                         </div>
                     </div>
