--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                         </div>
                         <div class="div8-2">
                             <div class="logo2">
-                                <a href="www.google.com"><img height="60px" src="./images/Logo.png" alt="Organick"></a>
+                                <a href="www.google.com"><img height="60px" src="./image3/Logo.png" alt="Organick"></a>
                                 <div class="divb2"><b>Organick</b></div>
                             </div>
                             <div class="div8-2-1"> le gout du delicieux</div>
@@ -176,7 +176,7 @@
                 <div class="header">
                     <div class="logo">
                         <div class="gauche">
-                            <a href="www.google.com"><img height="60px" src="./images/Logo.png" alt="Organick"></a>
+                            <a href="www.google.com"><img height="60px" src="./image3/Logo.png" alt="Organick"></a>
                             <div class="divb"><b>Organick</b></div>
                         </div>
                     </div>
@@ -324,7 +324,7 @@
                         </div>
                         <div class="div8-2">
                             <div class="logo2">
-                                <a href="www.google.com"><img height="60px" src="./images/Logo.png" alt="Organick"></a>
+                                <a href="www.google.com"><img height="60px" src="./image3/Logo.png" alt="Organick"></a>
                                 <div class="divb2"><b>Organick</b></div>
                             </div>
                             <div class="div8-2-1"> le gout du delicieux</div>
